--- a/layouts/register/list.html
+++ b/layouts/register/list.html
@@ -141,8 +141,8 @@
                       <option value="Red Hat Czech s.r.o."></option>
                       <option value="Skype Czech Republic s.r.o."></option>
                       <option value="Expedia Services CZ, s.r.o."></option>
-                      <option value="Monster Worldwide CZ s.r.o"></option>
                       <option value="DHL IT Services (Europe), s.r.o."></option>
+                      <option value="Vendavo CZ s.r.o."></option>
                     </datalist>
                   </label>
                 </div>
