About us - people shortcode (#334)
New UI element with info about some of our people. We are still waiting
for the photos, so DO NOT MERGE until we update this PR with photos.
Photo shoot should happen in January 2026.

Closes #332
----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -142,6 +142,47 @@
     font-size: 16px;
 }
 
+.about-page-profile {
+    @include style-md;
+    display: flex;
+    gap: 75px;
+
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.about-page-profile-container {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    margin-top: 16px;
+}
+
+.about-page-profile-photo {
+    flex-grow: 0;
+    flex-shrink: 0;
+    width: 150px;
+    height: 225px;
+}
+
+.about-page-profile-text-container {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.about-page-profile-title {
+    margin-bottom: 16px;
+    font-weight: 600;
+    font-size: 32px;
+}
+
+.about-page-profile-description {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.7em;
+}
+
 .single-page-header-download {
     color: rgba($light-color, 0.7);
     font-size: 16px;
